# fast-notepad

./: .gitignore  .prettierignore  CMakeLists.txt  README.md  package-lock.json  package.json  refactor.py  run-tests.sh  wsl-build.sh
.agents/: AGENTS.md
.github/workflows/: ci.yml  release.yml
docs/: code_quality_plan.md  new_features_plan.md  phase4_bugfix_plan.md  project_analysis.md
docs/plans/: build_time_optimization_plan.md  cursor-bug-fix.md  fix-unsaved-changes-bug.md  hot-exit-session.md  html-highlighting-plan.md  open-with-support.md  test-coverage.md
scripts/: build-release.sh  run-tests.sh  windows_context_menu.reg
src/: FileHandler.cpp  FileHandler.h  FindPanel.cpp  FindPanel.h  NotepadApp.cpp  NotepadApp.h  Platform.cpp  Platform.h  SessionManager.cpp  SessionManager.h  ThemeManager.cpp  main.cpp
src/core/: AppState.h  NotepadApp.cpp  NotepadApp.h  SessionManager.cpp  SessionManager.h  ShortcutManager.cpp  ShortcutManager.h  WindowContext.cpp  WindowContext.h  main.cpp
src/io/: FileHandler.cpp  FileHandler.h  IFileDialog.h  NativeFileDialog.cpp  NativeFileDialog.h
src/ui/: FindPanel.cpp  FindPanel.h  MenuBar.cpp  MenuBar.h  ThemeManager.cpp  ThemeManager.h
src/utils/: Utf8Utils.cpp  Utf8Utils.h
tests/: test_file_handler.cpp  test_find_panel.cpp  test_menu_bar.cpp  test_platform.cpp  test_session_manager.cpp  test_shortcut_manager.cpp  test_text_editor_nav.cpp  test_theme_manager.cpp  test_window_context.cpp
